[package]
name = "zmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
color-eyre = "0.6.2"
ansi_term = "0.12.1"



# optimize for reasonable compile speed
[profile.release]
strip = "symbols"
lto = "thin"
opt-level = 3
debug = 0
overflow-checks = false
panic = "abort"